Se agrega funcionalidad para cerrar sesión desde cualquier apartado
Se agrega funcionalidad para cerrar sesión desde cualquier apartado

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
 
   <!-- CABECERA -->
   <div class="hero-wrap">
-    <div class="hero">IGLESIA ASAMBLEA DE DIOS SAMARIA</div>
-    <button class="logout-button" (click)="logout()">CERRAR SESIÓN</button>
+    <!-- <div class="hero">IGLESIA ASAMBLEA DE DIOS SAMARIA</div> -->
+    <!-- <button class="logout-button" (click)="logout()">CERRAR SESIÓN</button> -->
   </div>
 
   <!-- CONTENIDO CENTRAL -->
