--- a/src/app/components/app-component/app.component.html
+++ b/src/app/components/app-component/app.component.html
@@ -1,3 +1,4 @@
+<app-header *ngIf="!isLoginRoute"></app-header>
 <!-- Spinner global controlado por NgxSpinnerService -->
 <ngx-spinner
   bdColor="rgba(0,0,0,0.4)"
